--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
-          <img src="assets/img/tm.PNG" class="img-fluid animated" alt="">
+          <img src="assets/img/appscreenshot.png" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
