--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <div class="row content">
             <h3 class="text-center">TabMed Helps You Enable and Execute Your Virtual Care Strategy</h3>
             <p class="fst-italic text-center">
-              TabMed is an ideal partner for family, vetinary, dental, specailised and mental health clinics. Why partner with us? Here are some benefits to allow you to stay competitive:
+              TabMed is an ideal partner for family, vetinary, dental, specialised and mental health clinics. Why partner with us? Here are some benefits to allow you to stay competitive:
             </p>
 
           <div class="col-md-4  pt-5 order-1 order-md-2" data-aos="fade-up">
@@ -257,7 +257,7 @@
             </p>
           </div>
           <div class="col-md-4 pt-5" data-aos="fade-up">
-            <h4>Reduced Operaional Costs</h4>
+            <h4>Reduced Operational Costs</h4>
             <p>
               Leverage AI-assisted technology and services to execute a scalable, digitally-enabled care strategy.
             </p>
