--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <h2>Our TabMed mobile app easily allows <strong>online booking and consultation</strong> for healthcare services in Hong Kong. Whether you want to video call a doctor, schedule an appointment, or just want expert health advice - we've got your back.</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
             <a href="#" class="download-btn download-btn-apple mb-4"><i class="bx bxl-apple"></i> Launching Soon</a>
+            <a href="consultation.html" class="download-btn"><i class="bi bi-people-fill"></i>Start Your Sexual Health Consultation</a>
             <a href="mailto: tabmedhk@gmail.com" class="download-btn"><i class="bi bi-people-fill"></i>Partner With Us</a>
           </div>
         </div>
