--- a/consultation.html
+++ b/consultation.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script src='//fw-cdn.com/2615005/3075252.js' chat='true'> </script>
+
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -86,14 +89,24 @@
   <!-- ======= Hero Section ======= -->
   <section id="" class="d-flex align-items-center">
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
 
         <iframe src="https://links.collect.chat/63e381fddbdefebfff0f5338"  width="100%" height="600" frameBorder="0"></iframe>
 
 
       </div>
-    </div>
+    </div> -->
+
+    <script>
+window.fcWidgetMessengerConfig = {
+  config: {
+    fullscreen: true,
+  }
+}
+</script>
+
+<script src='//fw-cdn.com/2615005/3075252.js' chat='true'></script>
 
   </section><!-- End Hero -->
 
