--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<script src='//fw-cdn.com/2615005/3075252.js' chat='true'> </script>
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -632,6 +634,10 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- AI BotPress -->
+
+  <script src="botpress/assets/modules/channel-web/inject.js"></script>
 
 </body>
 
