--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script src='//fw-cdn.com/2615005/3075252.js' chat='true'> </script>
 
 <head>
   <meta charset="utf-8">
@@ -637,7 +636,17 @@
 
   <!-- AI BotPress -->
 
-  <script src="botpress/assets/modules/channel-web/inject.js"></script>
+  <!-- Start of ChatBot (www.chatbot.com) code -->
+<script type="text/javascript">
+    window.__be = window.__be || {};
+    window.__be.id = "63e8b65585e1c300072091d6";
+    (function() {
+        var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
+        be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
+    })();
+</script>
+<!-- End of ChatBot code -->
 
 </body>
 
