--- a/telemed.html
+++ b/telemed.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Meet Kelly, Your AI Sexual Health Advisor in Hong Kong</title>
+  <title>TabMed | Online Doctor Consultation & Booking in Hong Kong</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,8 +50,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Kelly AI</a></li>
-          <li><a class="nav-link scrollto" href="telemed.html">Online Medical Consultation</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Kelly AI</a></li>
+          <li><a class="nav-link scrollto active" href="telemed.html">Online Medical Consultation</a></li>
           <!-- <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="#faq">F.A.Q</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -75,30 +75,25 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
     </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="pink d-flex align-items-center">
+  <section id="hero" class="d-flex align-items-center">
 
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1 class="mb-4">👋 Meet Kelly, Your AI Sexual Health Advisor in Hong Kong</h1>
-            <h2>Kelly - 你的AI性健康的醫生。<br><br>Ask Kelly for quick answers to any initmate sexual health related questions without the embarrasement in-person.<br><br>Free and <strong>anonymous</strong>.</h2>
-
+            <h1>Talk to a doctor you can trust, anytime. 🇭🇰</h1>
+            <h2>Our TabMed mobile app easily allows <strong>online booking and consultation</strong> for healthcare services in Hong Kong. Whether you want to video call a doctor, schedule an appointment, or just want expert health advice - we've got your back.</h2>
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
-
-            <div class="chatbutton download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</div>
-            <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
+            <a href="consultation.html" class="download-btn"><i class="bi bi-apple"></i>Coming Soon</a>
 
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
-          <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
-
+          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -108,41 +103,209 @@
   <main id="main">
 
     <!-- ======= App Features Section ======= -->
-
-
-    <!-- ======= Details Section ======= -->
-    <section  class="details kelly-1">
+    <section id="features" class="features">
       <div class="container">
 
-        <div class="row content">
-          <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/kelly-hero2.png" class="img-fluid" alt="">
+        <div class="section-title">
+          <h1>Healthcare at your Fingertips</h1>
+          <p>Your doctor - and an entire team of medical experts in various specialities - ready to provide immediate on-demand help with all your health concerns, whether you have insurance or not.</p>
+        </div>
+
+        <div class="row no-gutters">
+          <div class="col-xl-7 d-flex align-items-stretch order-2 order-lg-1">
+            <div class="content d-flex flex-column justify-content-center">
+              <div class="row">
+                <div class="col-md-6 icon-box" data-aos="fade-up">
+                  <i class="bx">👩‍⚕️</i>
+                  <h4>Doctors</h4>
+                  <p>Chat and talk to a licensed doctor regarding medical advice and help.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+                  <i class="bx">🏥</i>
+                  <h4>Clinics</h4>
+                  <p>Connect to a licensed therapist and book a virtual or physical consultation.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+                  <i class="bx">🩻</i>
+                  <h4>Specialists</h4>
+                  <p>Connect to specialist care ranging from opthomologists to deontologists.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
+                  <i class="bx">🧠</i>
+                  <h4>Therapists</h4>
+                  <p>Connect to a licensed therapist and book a virtual or physical consultation for related mental health issues.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
+                  <i class="bx">🐶</i>
+                  <h4>Vets</h4>
+                  <p>Seek online virtual consultation for your loved pet or book a physical consulation with our app.</p>
+                </div>
+                <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
+                  <i class="bx">🦷</i>
+                  <h4>Dentists</h4>
+                  <p>Have follow up care virtually through our application and book dental services.</p>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-md-8 pt-4" data-aos="fade-up">
-            <h3 class="white">🫶 Concise Information Given to You</h3>
-            <p>
-              No more digging around government and clinic websites. Sexual health information, clinic locations, phone number, appointment booking and opening times are easily available to you by asking Kelly.
-            </p>
-            <p>
-              Ask Kelly any embarrasing and intimate questions that you would not have asked your parents or doctor. Kelly is constantly learning and improving as you interact with it.
-            </p>
-            <ul>
-              <li>🆘 Where do I get emergency medicine?</li>
-              <li>🙊 What to do my boyfriend/girlfriend is pressuring me into sex?</li>
-              <li>🤌 Is my penis/vagina normal?</li>
-              <li>📍 Where can I test for STDs?</li>
-              <li>⚧️ Are there gender-affirming hormone therapies in Hong Kong?</li>
-            </ul>
-
-            <div class="chatbutton download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</div>
-
+          <div class="image col-xl-5 d-flex align-items-stretch justify-content-center order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+            <img src="assets/img/features.svg" class="img-fluid" alt="">
           </div>
         </div>
 
       </div>
+    </section><!-- End App Features Section -->
+
+    <!-- ======= Details Section ======= -->
+    <section  class="details">
+      <div class="container">
+
+        <div class="row content">
+          <div class="col-md-4" data-aos="fade-right">
+            <img src="assets/img/details-1.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-md-8 pt-4" data-aos="fade-up">
+            <h3>Delivering a Level of Primary Care Beyond What's Humanly Possible</h3>
+            <p>
+              TabMed's Software aims to combine the efficiencies of <strong>artificial intelligence</strong> with the expertise and empathy of medical professionals.
+            </p>
+            <p>
+              Our AI-assisted primary care model drives higher-quality service, better patient outcomes and delivers virtual care at a lower operational cost than in-house software development.
+            </p>
+            <ul>
+              <li>💽 Medical data extraction from video consultations and messages</li>
+              <li>📈 Medical data normalization (FHIR, ICD10)</li>
+              <li>📊 Automated consultations reports and EHR updates</li>
+              <li>🤖 Machine learning models fine-tuned for your patients</li>
+            </ul>
+            <p>
+              Using GPT-3 as the backbone for providing augmented care with machine learning, we capture and structure medical data to build strong foundations for personalised care.
+            </p>
+            <a href="mailto: tabmedhk@gmail.com" class="download-btn"><i class="bi bi-people-fill"></i>Partner With Us</a>
+
+          </div>
+        </div>
+
+        <div class="row content">
+          <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
+            <img src="assets/img/details-2.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
+            <h3>Comprehensive Virtual Care Solution</h3>
+            <p class="fst-italic">
+              At our core, we provide FaceTime-like consultations and online booking for both virtual and physical care, making it easy for patients to recieve the care they need from the comfort of their own homes.
+            </p>
+            <ul>
+              <li>👩‍⚕️ Personalised PCP (Primary Care Provider)</li>
+              <li>📈 Care Programs and Condition Management</li>
+              <li>💊 Augmented Prescription and Lab Ordering</li>
+              <li>🌐 Referral Management and Network Navigation</li>
+            </ul>
+            <a href="mailto: tabmedhk@gmail.com" class="download-btn"><i class="bi bi-people-fill"></i>Partner With Us</a>
+
+          </div>
+        </div>
+
+        <div class="row content">
+          <div class="col-md-4" data-aos="fade-right">
+            <img src="assets/img/details-3.png" class="img-fluid" alt="">
+          </div>
+          <div class="col-md-8 pt-5" data-aos="fade-up">
+            <h3>How Our App Works</h3>
+            <p>As a clinic or healthcare proider, it is becoming increasingly important for you to incorporate telemedicine technology in order to <strong>meet the demands of patients and stay competitive</strong>. We believe that our telemedicine platform can help you do just that Here is .</p>
+            <ul>
+              <li>1️⃣ Patient messages you from the TabMed app whether they need urgent care, a routine checkup, a prescription refill, have a question or need advice.</li>
+              <li>2️⃣ We will connect you to the patient through our chatting and video calling system accessible via an admin dashboard online.</li>
+              <li>3️⃣ You can then send a personalised plan with steps the patient can take with a diagnosis and course of action, including prescription delivery or scheduled physical follow-up in your clinic.</li>
+            </ul>
+            <a href="mailto: tabmedhk@gmail.com" class="download-btn"><i class="bi bi-people-fill"></i>Partner With Us</a>
+
+
+          </div>
+        </div>
+
+        <div class="row content">
+            <h3 class="text-center">TabMed Helps You Enable and Execute Your Virtual Care Strategy</h3>
+            <p class="fst-italic text-center">
+              TabMed is an ideal partner for family, vetinary, dental, specialised and mental health clinics. Why partner with us? Here are some benefits to allow you to stay competitive:
+            </p>
+
+          <div class="col-md-4  pt-5 order-1 order-md-2" data-aos="fade-up">
+            <h4>Improved Patient Access</h4>
+            <p>
+              Reach a wider patient base, including those who may not be able to come into the clinic for an in-person visit.
+            </p>
+          </div>
+          <div class="col-md-4 pt-5 order-2 order-md-1" data-aos="fade-up">
+            <h4>Increased Efficiency</h4>
+            <p>
+              Help your clinic save time and resources by reducing the need for in-person visits and streamlining appointment scheduling.
+            </p>
+          </div>
+          <div class="col-md-4 pt-5 order-2 order-md-1" data-aos="fade-up">
+            <h4>Increased Patient Satisfaction</h4>
+            <p>
+              Improve patient satisfaction by providing your patients wih more convenient and accessible care.
+            </p>
+          </div>
+          <div class="col-md-4 pt-5 order-1 order-md-1" data-aos="fade-up">
+            <h4>Increased Revenue</h4>
+            <p>
+              Attract new patients and increase revenue by offering additional services and expanding your reach.
+            </p>
+          </div>
+          <div class="col-md-4 pt-5" data-aos="fade-up">
+            <h4>Reduced Operational Costs</h4>
+            <p>
+              Leverage AI-assisted technology and services to execute a scalable, digitally-enabled care strategy.
+            </p>
+          </div>
+          <div class="col-md-4 pt-5" data-aos="fade-up">
+            <h4>Increased Patient Outcomes</h4>
+            <p>
+              Allow more timely and frequent follow-up care, which will be beneficial for patients with chronic conditions.
+            </p>
+          </div>
+
+        </div>
+
+
+
+
+      </div>
     </section><!-- End Details Section -->
 
+    <!-- ======= Gallery Section ======= -->
+    <section id="gallery" class="gallery">
+      <div class="container" data-aos="fade-up">
 
+        <div class="section-title">
+          <h2 class="tabmedtitle">Our Mobile App</h2>
+        </div>
+
+      </div>
+
+      <div class="container-fluid" data-aos="fade-up">
+        <div class="gallery-slider swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-1.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-1.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-2.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-2.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-3.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-3.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-4.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-4.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-5.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-5.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-6.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-6.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-7.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-7.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-8.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-8.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-9.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-9.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-10.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-10.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-11.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-11.png" class="img-fluid" alt=""></a></div>
+            <div class="swiper-slide"><a href="assets/img/gallery/gallery-12.png" class="gallery-lightbox" data-gall="gallery-carousel"><img src="assets/img/gallery/gallery-12.png" class="img-fluid" alt=""></a></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section><!-- End Gallery Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <!-- <section id="testimonials" class="testimonials section-bg">
@@ -456,8 +619,7 @@
       </div>
   </footer><!-- End Footer -->
 
-<!-- Back to top button -->
-  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
@@ -470,43 +632,6 @@
   <script src="assets/js/main.js"></script>
 
   <!-- AI BotPress -->
-
-  <script>
-        var button = document.querySelector('.chatbutton')
-        button.addEventListener('click', onButtonClick)
-
-        function onButtonClick () {
-            BE_API.openChatWindow()
-            hideButton()
-        }
-
-        function showButton () {
-            button.classList.remove('hidden')
-        }
-
-        function hideButton () {
-            button.classList.add('hidden')
-        }
-
-        window.BE_API = window.BE_API || {}
-
-        window.BE_API.onLoad = function () {
-            window.BE_API.hideChatWindow()
-            showButton()
-        }
-
-        window.BE_API.onChatWindowOpen = function () {
-            hideButton()
-        }
-
-        window.BE_API.onChatWindowClose = function () {
-            window.BE_API.hideChatWindow()
-        }
-
-        window.BE_API.onChatWindowHide = function () {
-            showButton()
-        }
-    </script>
 
   <!-- Start of ChatBot (www.chatbot.com) code -->
 <script type="text/javascript">
