--- a/telemed.html
+++ b/telemed.html
@@ -574,10 +574,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#features">Our Service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#gallery">Our app</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact Us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Kelly AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
+
             </ul>
           </div>
 <!--
@@ -633,17 +633,6 @@
 
   <!-- AI BotPress -->
 
-  <!-- Start of ChatBot (www.chatbot.com) code -->
-<script type="text/javascript">
-    window.__be = window.__be || {};
-    window.__be.id = "63e8b65585e1c300072091d6";
-    (function() {
-        var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
-        be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
-    })();
-</script>
-<!-- End of ChatBot code -->
 
 </body>
 
