--- a/index.html
+++ b/index.html
@@ -411,10 +411,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#features">Our Service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#gallery">Our app</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact Us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Kelly AI</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Online Medical Consultation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="telemed.html">Our App</a></li>
+
             </ul>
           </div>
 <!--
