--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
               <li>🥼 Wil the doctor tell my parents if I have an STD?</li>
             </ul>
 
+            <div class="chatbutton download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</div>
+
+
 
           </div>
         </div>
@@ -488,13 +491,13 @@
         // function hideButton () {
         //     button.classList.add('hidden')
         // }
-
-        window.BE_API = window.BE_API || {}
-
-        window.BE_API.onLoad = function () {
-            window.BE_API.hideChatWindow()
-            showButton()
-        }
+        //
+        // window.BE_API = window.BE_API || {}
+        //
+        // window.BE_API.onLoad = function () {
+        //     window.BE_API.hideChatWindow()
+        //     showButton()
+        // }
         //
         // window.BE_API.onChatWindowOpen = function () {
         //     hideButton()
