--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-            <div class="chatbutton download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</div>
+            <button onclick="BE_API.openChatWindow();return false;" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
             <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
 
           </div>
@@ -128,15 +128,15 @@
             </p>
             <ul>
               <li>🆘 Where do I get emergency medicine?</li>
-              <li>🙊 What to do my boyfriend/girlfriend is pressuring me into sex?</li>
+              <li>🙊 What to do if  my boyfriend/girlfriend is pressuring me into sex?</li>
               <li>🤌 Is my penis/vagina normal?</li>
-              <li>📍 Where can I test for STDs?</li>
+              <li>📍 Where can I get tested for STDs?</li>
               <li>⚧️ Are there gender-affirming hormone therapies in Hong Kong?</li>
               <li>💊 How much are birth control pills?</li>
               <li>🥼 Wil the doctor tell my parents if I have an STD?</li>
             </ul>
 
-            <div class="chatbutton download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</div>
+            <button onclick="BE_API.openChatWindow();return false;" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
 
 
 
