--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
             <button onclick="BE_API.openChatWindow();return false;" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
             <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
 
+
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
           <img src="assets/img/kelly-hero.png" class="img-fluid" alt="">
+
 
         </div>
       </div>
@@ -513,7 +515,7 @@
     </script>
  -->
     <!-- Start of ChatBot (www.chatbot.com) code -->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.__be = window.__be || {};
         window.__be.id = "63e8b65585e1c300072091d6";
         (function() {
@@ -521,7 +523,17 @@
             be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
         })();
-    </script>
+    </script> -->
+    <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
+<script>
+  window.botpressWebChat.init({
+      "botId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+      "hostUrl": "https://cdn.botpress.cloud/webchat/v0",
+      "messagingUrl": "https://messaging.botpress.cloud",
+      "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+      "botName": "kelly"
+  });
+</script>
     <!-- End of ChatBot code -->
 </body>
 
