--- a/index.html
+++ b/index.html
@@ -525,15 +525,16 @@
         })();
     </script> -->
     <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
-<script>
-  window.botpressWebChat.init({
-      "botId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
-      "hostUrl": "https://cdn.botpress.cloud/webchat/v0",
-      "messagingUrl": "https://messaging.botpress.cloud",
-      "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
-      "botName": "kelly"
-  });
-</script>
+  <script>
+    window.botpressWebChat.init({
+        "botId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+        "hostUrl": "https://cdn.botpress.cloud/webchat/v0",
+        "messagingUrl": "https://messaging.botpress.cloud",
+        "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+        "botName": "Kelly"
+        "layoutWidth": "800"
+    });
+  </script>
     <!-- End of ChatBot code -->
 </body>
 
