--- a/index.html
+++ b/index.html
@@ -531,7 +531,9 @@
         "hostUrl": "https://cdn.botpress.cloud/webchat/v0",
         "messagingUrl": "https://messaging.botpress.cloud",
         "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
-        "botName": "Kelly"
+        "botName": "Kelly",
+        "className": "kellybot",
+        "layoutWidth": "390"
     });
   </script>
     <!-- End of ChatBot code -->
