--- a/index.html
+++ b/index.html
@@ -532,7 +532,11 @@
         "messagingUrl": "https://messaging.botpress.cloud",
         "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
         "botName": "Kelly",
-        "className": "kellybot",
+        "stylesheet": "assets/css/style.css",
+        "className": "botcss",
+        "avatarUrl": "assets/img/kellyicon.jpg"
+
+
     });
   </script>
     <!-- End of ChatBot code -->
