--- a/index.html
+++ b/index.html
@@ -534,7 +534,9 @@
         "botName": "Kelly",
         "stylesheet": "assets/css/style.css",
         "className": "botcss",
-        "avatarUrl": "assets/img/kellyicon.jpg"
+        "avatarUrl": "assets/img/kellyicon.jpg",
+        "composerPlaceholder": "Ask a sexual health question...",
+        "showConversationsButton": "false"
 
 
     });
