--- a/index.html
+++ b/index.html
@@ -91,7 +91,20 @@
 
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-            <button onclick="BE_API.openChatWindow();return false;" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
+            <button onclick="window.botpressWebChat.init({
+                "botId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+                "hostUrl": "https://cdn.botpress.cloud/webchat/v0",
+                "messagingUrl": "https://messaging.botpress.cloud",
+                "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
+                "botName": "Kelly",
+                "stylesheet": "assets/css/style.css",
+                "className": "botcss",
+                "avatarUrl": "assets/img/kellyicon.jpg",
+                "composerPlaceholder": "Ask a sexual health question...",
+                "showConversationsButton": "false"
+
+
+            });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
             <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
 
 
@@ -534,9 +547,9 @@
         "botName": "Kelly",
         "stylesheet": "assets/css/style.css",
         "className": "botcss",
-        "avatarUrl": "assets/img/kellyicon.jpg",
         "composerPlaceholder": "Ask a sexual health question...",
-        "showConversationsButton": "false"
+        "showConversationsButton": "false",
+        "layoutWidth": "100%"
 
 
     });
