--- a/index.html
+++ b/index.html
@@ -535,8 +535,7 @@
         "stylesheet": "assets/css/style.css",
         "className": "botcss",
         "composerPlaceholder": "Ask a sexual health question...",
-        "showConversationsButton": "false",
-        "layoutWidth": "100%"
+        "showConversationsButton": "false"
     });
   </script>
     <!-- End of ChatBot code -->
