--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         "messagingUrl": "https://messaging.botpress.cloud",
         "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
         "botName": "Kelly",
-        "stylesheet": "assets/css/style.css",
+        "stylesheet": "botpress.css",
         "className": "botcss",
         "composerPlaceholder": "Ask a sexual health question...",
         "showConversationsButton": "false"
