--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/botpresss.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Appland - v4.10.0
@@ -534,7 +535,7 @@
         "botName": "Kelly",
         "stylesheet": "botpress.css",
         "className": "botcss",
-        "composerPlaceholder": "Ask a sexual health question...",
+        "composerPlaceholder": "Start by saying Hi...",
         "showConversationsButton": "false"
     });
   </script>
