--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
-            <button onclick="" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
+            <button onclick="" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly by Pressing Black Button At Bottom Right</button>
             <button type="button" class="btn btn-outline-secondary">Beta V1.0</button>
 
 
@@ -139,7 +139,7 @@
               <li>🥼 Wil the doctor tell my parents if I have an STD?</li>
             </ul>
 
-            <button onclick="BE_API.openChatWindow();return false;" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly</button>
+            <button onclick="" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Kelly by Pressing Black Button At Bottom Right</button>
 
 
 
@@ -536,7 +536,9 @@
         "stylesheet": "botpress.css",
         "className": "botcss",
         "composerPlaceholder": "Start by saying Hi...",
-        "showConversationsButton": "false"
+        "showConversationsButton": "false",
+        "disableNotificationSound": "false",
+        "layoutWidth": "400",
     });
   </script>
     <!-- End of ChatBot code -->
