--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
         "messagingUrl": "https://messaging.botpress.cloud",
         "clientId": "1ae39d4c-1cb9-4f0e-a114-32447becf85d",
         "botName": "Kelly",
-        "stylesheet": "botpress.css",
+        "stylesheet": "https://tabmed.hk/botpress.css",
         "className": "botcss",
         "composerPlaceholder": "Start by saying Hi...",
         "showConversationsButton": "false",
